# filesearch

./: .gitignore  README.md  entry_point.py  filesearch.spec  pyproject.toml
.github/workflows/: release.yml
src/filesearch/: __init__.py  __main__.py  cli.py  colors.py  output.py  searchers.py  walker.py
