[project]
name = "filesearch"
version = "1.0.0"
description = "Recursively search files (including PDFs) for a word or phrase."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pypdf>=4.0.0",
]

[project.scripts]
filesearch = "filesearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/filesearch"]
